html index updated to final edit

--- a/DUCKHUNT/index.html
+++ b/DUCKHUNT/index.html
@@ -5,12 +5,19 @@
     <title>Danny!</title>
     <link rel="stylesheet" href="stylesheets/style.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+     <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+     <link href='https://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
     <script src="apps/app2.js"></script>
   </head>
   <body>
+    <h1 class="game">Stop the<br>EARTHLING INVASION</h1>
     <div class= "surface">
     <div id='button'>Start Game</div>
     <div class='ship'></div>
     </div>
+    <audio id="explosion" src="Bomb 3-SoundBible.com-1260663209.wav"
+    ></audio>
+    <audio src="earthling_invasion.wav" autoplay
+    ></audio>
   </body>
 </html>
